# omnistate

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  Python313_兼容性修复说明.md  README.md  README_Kafka测试.md  SDK实现总结报告.md  demo_dependency_order.py  design-test-case-collection.md  llms.txt  main.py  package-lock.json  package.json  quick_kafka_test.py  requirements.txt  start_backend.py  test_complex_workflows.py  test_kafka_integration.py  test_requirements.txt  worklog_2026-06-18_2026-06-22.md  业务流程.md  模拟数据创建完成总结.md  模拟数据快速指南.md  模拟测试数据说明.md  测试用户账号.md  测试脚本使用指南.md  测试脚本快速参考.md  演示账户使用说明.md  登录页演示账户更新.md
backend/: .flake8  .gitignore  .server.pid  AI_REFACTOR_PLAN.md  DMLV4_BACKEND_REFACTOR_FINAL_REPORT.md  README.md  code_review_report.html  config.yaml  config.yaml.example  config_dev.yaml  config_dev.yaml.example  demo.json  kafka_worker.sh  nohup.out  pyproject.toml  quick_kafka_test.py  requirement  requirements.txt  server.sh  simple_kafka_test.py  test.py  test_kafka_connection.py  test_kafka_integration.py
backend/.workbuddy/memory/: 2026-07-01.md
backend/app/: init_mongodb.py  init_projects.py  init_system_config.py  main.py
backend/app/api/: __init__.py  main.py
backend/app/configs/: README.md  global_config.json  requirement.json  test_case.json
backend/app/core/: mongo_client.py
backend/app/db/: __init__.py  config.py
backend/app/models/: business.py  system.py
backend/app/modules/: __init__.py
backend/app/services/: __init__.py  exceptions.py  workflow.md  workflow_service.py
backend/app/shared/: __init__.py  context.py  middleware.py
backend/app/workers/: kafka_worker_main.py  rabbitmq_worker_main.py
backend/docs/: ARCHITECTURE_REVIEW_2026-07-01.md  CODE_REVIEW_2026-07-01.md  README.md  authorization_design.md  backend_architecture_review.md  code-review-2026-04-02.md  docker.md  execution_api.md  index.md  mock-rabbitmq-consumer-logic.md  package-lock.json  package.json  permission_validation_patterns.md  rbac_api_permissions.md  rbac_design.md  requirement_testcase_relation_design.md  测试需求测试用例设计方案.md
backend/docs/.vitepress/: config.mts
backend/docs/adr/: 2026-04-auth-resource-services.md  2026-04-test-specs-read-write-split.md
backend/docs/architecture/: overview.md
backend/docs/design/: design-global-config.md  manual-execution-plan.md  test-case-catalog-implementation-plan.md
backend/docs/guide/: architecture-overview.md  authentication.md  debugging-playbook.md  how-to-change-backend.md  local-development.md  quick-start.md
backend/scripts/: README.md  README_TOKEN.md  audit_workflow_consistency.py  backfill_work_item_req_id.py  cleanup_integration_all_junk.py  cleanup_integration_catalog_junk.py  cleanup_integration_permission_junk.py  cleanup_integration_role_nav_junk.py  cleanup_integration_user_junk.py  cleanup_integration_workflow_junk.py  cleanup_test_data.py  create_token.py  create_token_simple.py  create_user.py  drop_index.py  generate_mock_test_cases.py  init_rbac.py  integration_test_cleanup.py  migrate_test_case_catalog.py  migrate_test_case_to_bios_lab.py  mock_rabbitmq_consumer.py  mock_test_framework.py  register_agent.py  repair_workflow_consistency.py  reprocess_events.py  seed_complete_flow.py  seed_execution_plans.py  seed_test_case_random_catalog.py  seed_test_data.py  seed_test_users.py  verify_test_data.py
backend/tests/: conftest.py
(+947 files in other folders)
