[project]
name = "dmlv4-backend"
version = "1.0.0"
description = "DML V4 Backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "starlette>=0.52.1",
    "sse-starlette>=2.3.5",
    "python-multipart>=0.0.22",
    "httpx>=0.28.1",

    # Database - MongoDB
    "beanie>=2.0.1",
    "pymongo>=4.15.5",
    "motor>=3.7.1",
    "bson>=0.5.10",

    # Database - SQL (部分模块使用)
    "SQLAlchemy>=2.0.48",
    "sqlmodel>=0.0.37",

    # Database - Redis
    "redis>=7.1.0",

    # Database - Elasticsearch
    "elasticsearch>=9.2.1",

    # Database - PostgreSQL
    "asyncpg>=0.31.0",

    # Message Queue
    "kafka-python>=2.3.0",
    "pika>=1.3.2",
    "aio-pika>=9.6.2",

    # Auth
    "PyJWT>=2.12.1",
    "python-jose>=3.5.0",
    "bcrypt>=5.0.0",
    "passlib>=1.7.4",
    "ecdsa>=0.19.1",

    # Config & Validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pydantic-extra-types>=2.11.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.2",

    # LLM / AI
    "openai>=2.29.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langchain-core>=1.2.22",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "langgraph-prebuilt>=1.0.8",
    "langgraph-checkpoint>=4.0.1",
    "langgraph-sdk>=0.3.12",
    "langsmith>=0.7.22",
    "tiktoken>=0.12.0",
    "tavily>=1.1.0",

    # ML / Data
    "transformers>=4.57.3",
    "sentence-transformers>=3.0.0",
    "accelerate>=1.12.0",
    "safetensors>=0.7.0",
    "tokenizers>=0.22.1",
    "huggingface-hub>=0.35.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
    "scikit-learn>=1.5.0",

    # Storage
    "minio>=7.2.20",

    # SSH / Terminal
    "asyncssh>=2.14.0",
    "paramiko>=4.0.0",

    # Monitoring & Logging
    "loguru>=0.7.3",
    "sentry-sdk>=2.50.0",

    # Task Scheduling
    "APScheduler>=3.10.4",

    # Utils
    "orjson>=3.11.7",
    "tenacity>=9.1.4",
    "aiofiles>=24.1.0",
    "python-dateutil>=2.9.0",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
    "Jinja2>=3.1.6",
    "Markdown>=3.8",
    "html2text>=2025.4.15",
    "email-validator>=2.3.0",
    "dnspython>=2.8.0",
    "jsonschema>=4.24.0",
    "typer>=0.15.4",
    "pytz>=2025.2",
    "psutil>=7.0.0",

    # File processing
    "python-docx>=0.8.11",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "pypdf>=6.13.1",
    "PyPDF2>=3.0.1",
    "pypdfium2>=5.3.0",
    "reportlab>=4.4.7",
    "pdf2image>=1.17.0",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "flake8>=7.3.0",
    "ruff>=0.11.12",
    "coverage>=7.0.0",
    "httpx>=0.28.1",
    "Faker>=37.4.2",
    "allure-pytest>=2.15.3",
    "vulture>=2.16",
]

[tool.uv]
[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
    "ipython>=9.4.0",
    "jupyter-client>=8.0.0",
    "debugpy>=1.8.0",
    "matplotlib>=3.10.3",
    "pydeps>=3.0.6",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.flake8]
max_line_length = 110
max_complexity = 12
extend-ignore = "E203, W503"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
